--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
     <header class="page-header" role="banner">
       <img src="/images/{{ site.logo }}" alt="{{ page.title | default: site.title | default: site.github.repository_name }}" class="project-name" width="250" />
       <h1 class="project-name">
-        {{ site.name }}
+        {{ site.name }}<br>
         {{ site.title | default: site.github.repository_name }}
       </h1>
     </header>
