--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
-      <img src="/images/{{ site.logo }}" alt="{{ page.title | default: site.title | default: site.github.repository_name }}" class="project-name" width="250" />
+      <img src="/images/{{ site.logo }}" alt="{{ page.title | default: site.title | default: site.github.repository_name }}" class="project-name" width="250" /><sup>&trade;</sup>
       <h1 class="project-name">
         {{ site.name }}<br>
         {{ site.title | default: site.github.repository_name }}
