--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,10 +23,10 @@
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
-      <span style="position: relative;">
+      <div style="position: relative;">
       <img src="/images/{{ site.logo }}" alt="{{ page.title | default: site.title | default: site.github.repository_name }}" class="project-name" width="250" />
       <span style="position: relative; top: 0;">&trade;</span>
-      </span>
+      </div>
       <h1 class="project-name">
         {{ site.name }}<br>
         {{ site.title | default: site.github.repository_name }}
