--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,6 +40,8 @@
         {% if site.github.is_project_page %}
           <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
         {% endif %}
+        <strong>SJMJC, L.L.C.</strong>
+        <b>Patent: #62/773,347<b>
       </footer>
     </main>
   </body>
