--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
     <header class="page-header" role="banner">
       <div style="position: relative;">
       <img src="/images/{{ site.logo }}" alt="{{ page.title | default: site.title | default: site.github.repository_name }}" class="project-name" width="250" />
-      <span style="position: absolute; top: 0;">&trade;</span>
+      <span style="position: absolute; top: 0; font-size: 2rem:">&trade;</span>
       </div>
       <h1 class="project-name">
         {{ site.name }}<br>
