--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,20 @@
 
 @import "{{ site.theme }}";
 
+html {
+  font-family: 'Roboto', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Comfortaa', cursive;
+  text-transform: uppercase;
+}
+
+h1,
+h2 {
+ text-align: center; 
+}
+
 .main-content img {
   width: auto;
   max-width: 100%;
