--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,13 +8,18 @@ html {
 }
 
 h1, h2, h3, h4, h5, h6 {
+  margin-bottom: 0;
   font-family: 'Comfortaa', cursive;
   text-transform: uppercase;
 }
 
 h1,
 h2 {
- text-align: center; 
+  text-align: center; 
+}
+
+h1 + h2 {
+  margin-top: 0; 
 }
 
 .main-content img {
