--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,7 +8,7 @@ html {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  margin-bottom: 0;
+  margin-bottom: 0 !important;
   font-family: 'Comfortaa', cursive;
   text-transform: uppercase;
 }
@@ -19,7 +19,7 @@ h2 {
 }
 
 h1 + h2 {
-  margin-top: 0; 
+  margin-top: 0 !important; 
 }
 
 .main-content img {
