--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -22,6 +22,10 @@ h1 + h2 {
   margin-top: 0 !important; 
 }
 
+.page-header {
+  padding: 1.5rem 6rem;
+}
+
 .main-content img {
   width: auto;
   max-width: 100%;
