--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,6 +25,8 @@ h1 + h2 {
 
 .page-header {
   padding: 1.5rem 6rem;
+  background-color: #000;
+  background-image: none;
 }
 
 .main-content img {
