--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,11 +5,13 @@
 
 html,
 body {
+  color: #b18d37;
   font-family: 'Roboto', sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
   margin-bottom: 0 !important;
+  color: black;
   font-family: 'Comfortaa', cursive;
   text-transform: uppercase;
 }
