--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,7 +11,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   margin-bottom: 0 !important;
-  color: black;
+  color: black !important;
   font-family: 'Comfortaa', cursive;
   text-transform: uppercase;
 }
