--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,6 +18,9 @@ h1, h2, h3, h4, h5, h6 {
 
 h1,
 h2 {
+  margin-bottom: 2rem !important;
+  padding-bottom: 1rem !important;
+  border-bottom: 2px solid currentcolor;
   text-align: center; 
 }
 
