--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,10 +18,13 @@ h1, h2, h3, h4, h5, h6 {
 
 h1,
 h2 {
+  text-align: center; 
+}
+
+h2 {
   margin-bottom: 2rem !important;
   padding-bottom: 1rem !important;
   border-bottom: 2px solid currentcolor;
-  text-align: center; 
 }
 
 h1 + h2 {
