--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,8 +16,14 @@ h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
 }
 
+h1 + h2 {
+  margin-top: 0 !important; 
+}
+
+
 h1,
-h2 {
+h2,
+h3 {
   text-align: center; 
 }
 
@@ -27,8 +33,8 @@ h2 {
   border-bottom: 2px solid currentcolor;
 }
 
-h1 + h2 {
-  margin-top: 0 !important; 
+h3 {
+ font-weigth: bold; 
 }
 
 .page-header {
