--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -65,3 +65,19 @@ h3 {
 video[poster]{
  object-fit: fill;
 }
+
+img[alt$=">"] {
+  float: right;
+}
+
+img[alt$="<"] {
+  float: left;
+}
+
+img[alt$="><"] {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  margin: auto;
+  float: none!important;
+}
