--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,6 +14,7 @@ h1, h2, h3, h4, h5, h6 {
   color: black !important;
   font-family: 'Comfortaa', cursive;
   text-transform: uppercase;
+  clear: both;
 }
 
 h1 + h2,
