--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -32,6 +32,7 @@ h2 {
   margin-bottom: 2rem !important;
   padding-bottom: 1rem !important;
   border-bottom: 2px solid currentcolor;
+  clear: both;
 }
 
 h3 {
