--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -71,11 +71,13 @@ video[poster]{
 img[alt$=">"] {
   float: right;
   margin-left: 2rem;
+  margin-bottom: 3rem;
 }
 
 img[alt$="<"] {
   float: left;
   margin-left: 2rem;
+  margin-bottom: 3rem;
 }
 
 img[alt$="><"] {
