--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -68,6 +68,10 @@ video[poster]{
  object-fit: fill;
 }
 
+figure {
+  clear: both;
+}
+
 img[alt$=">"] {
   float: right;
   margin-left: 2rem;
@@ -76,7 +80,7 @@ img[alt$=">"] {
 
 img[alt$="<"] {
   float: left;
-  margin-left: 2rem;
+  margin-right: 2rem;
   margin-bottom: 3rem;
 }
 
