--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;700&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <script type="text/javascript" src="https://opensource.teamdf.com/visible/jquery.visible.js"></script>
   </head>
   <body>
     <a id="skip-to-content" class="sr-only" href="#content">Skip to the content.</a>
