--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,14 +14,25 @@
     <meta charset="UTF-8">
 
 {% seo %}
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#157878">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;700&family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-    <script type="text/javascript" src="https://opensource.teamdf.com/visible/jquery.visible.js"></script>
-  </head>
-  <body>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="theme-color" content="#157878">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;700&family=Roboto&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+  <script type="text/javascript" src="https://opensource.teamdf.com/visible/jquery.visible.js"></script>
+  <script>  
+      $(window).scroll(function() {
+        $('video').each(function() {
+          if ($(this).visible(true)) {
+            $(this)[0].play();
+          } else {
+            $(this)[0].pause();
+          }
+        })
+     });
+   </script>
+   </head>
+   <body>
     <a id="skip-to-content" class="sr-only" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
