--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
       <img src="/images/{{ site.logo }}" alt="{{ page.title | default: site.title | default: site.github.repository_name }}" class="project-name" width="250" />
       <span style="position: absolute; top: 0; font-size: 3rem;">&trade;</span>
       </div>
-      <a href="/#instructions" class="btn">Instructions</a>
+      <a href="/#instructionsinstrucciones" class="btn">Instructions</a>
     </header>
 
     <main id="content" class="main-content" role="main">
