--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,8 @@
       <span style="position: absolute; top: 0; font-size: 3rem;">&trade;</span>
       </div>
       <a href="/#instructionsinstrucciones" class="btn">INSTRUCTIONS</a>
+      <a href="/#read-more">READ MORE</a>
+      <a href="/#parents-are-positive-about-the-q">TESTIMONIALS</a>
     </header>
 
     <main id="content" class="main-content" role="main">
