--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+i<!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
 
@@ -41,9 +41,10 @@
       <img src="/images/{{ site.logo }}" alt="{{ page.title | default: site.title | default: site.github.repository_name }}" class="project-name" width="250" />
       <span style="position: absolute; top: 0; font-size: 3rem;">&trade;</span>
       </div>
-      <a href="/#instructionsinstrucciones" class="btn">INSTRUCTIONS</a>
-      <a href="/#read-more" class="btn">READ MORE</a>
-      <a href="/#parents-are-positive-about-the-q" class="btn">TESTIMONIALS</a>
+      <a href="/instructions/" class="btn">INSTRUCTIONS</a>
+      <a href="/CCLS/" class="btn">CCLS</a>
+      <a href="/read-more/" class="btn">READ MORE</a>
+      <a href="/testimonials/" class="btn">TESTIMONIALS</a>
     </header>
 
     <main id="content" class="main-content" role="main">
