--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,6 +45,7 @@ i<!DOCTYPE html>
       <a href="/CCLS/" class="btn">CCLS</a>
       <a href="/read-more/" class="btn">READ MORE</a>
       <a href="/testimonials/" class="btn">TESTIMONIALS</a>
+      <a href="/references/" class="btn">REFERENCES</a>
     </header>
 
     <main id="content" class="main-content" role="main">
