--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,6 +46,7 @@ i<!DOCTYPE html>
       <a href="/read-more/" class="btn">READ MORE</a>
       <a href="/testimonials/" class="btn">TESTIMONIALS</a>
       <a href="/references/" class="btn">REFERENCES</a>
+      <a href="/applications/" class="btn">APPLICATIONS</a>
     </header>
 
     <main id="content" class="main-content" role="main">
