--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,6 +47,7 @@ i<!DOCTYPE html>
       <a href="/testimonials/" class="btn">TESTIMONIALS</a>
       <a href="/references/" class="btn">REFERENCES</a>
       <a href="/applications/" class="btn">APPLICATIONS</a>
+      <a href="/contact-us/" class="btn">CONTACT US</a>
     </header>
 
     <main id="content" class="main-content" role="main">
