--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,6 +57,19 @@ i<!DOCTYPE html>
         {% if site.github.is_project_page %}
           <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
         {% endif %}
+        ## **For more information contact us at:**
+
+        **Phone:** <a href="tel:1-806-778-2183">(806)778-2183</a> or <a href="tel:1-241-778-0373">(806)241-0373</a>
+
+        **Email:** <pphtheq@gmail.com>
+
+        **Website:** [www.PediatricPositionHolder.com - The Q](https://pediatricpositionholder.com)
+
+        ---
+        <div style="clear: both;"></div>    
+        &copy; Copyright 2020, SJMJC, LLC.
+
+        **Patent Number: #US 2020-017828A1**
       </footer>
     </main>
   </body>
