--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,20 +53,21 @@ i<!DOCTYPE html>
     <main id="content" class="main-content" role="main">
       {{ content }}
 
-      <footer class="site-footer">
+      <footer class="site-footer" id="for-more-information-contact-us-at">
         {% if site.github.is_project_page %}
           <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
         {% endif %}
         <h2><b>For more information contact us at:</b></h2>
-
+<p>
         <b>Phone:</b> <a href="tel:1-806-778-2183">(806)778-2183</a> or <a href="tel:1-241-778-0373">(806)241-0373</a>
-
+        </p>
+        <p>
         <b>Email:</b> <a href="mailto:pphtheq@gmail.com">pphtheq@gmail.com</a>
-
-        ---
-        <div style="clear: both;"></div>    
+</p>
+        <hr>
+        
         &copy; Copyright 2020, SJMJC, LLC.
-
+<br><br>
         <b>Patent Number: #US 2020-017828A1</b>
       </footer>
     </main>
