--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,7 +62,7 @@
         <b>Phone:</b> <a href="tel:1-806-778-2183">(806)778-2183</a> or <a href="tel:1-241-778-0373">(806)241-0373</a>
         </p>
         <p>
-        <b>Email:</b> <a href="mailto:pphtheq@gmail.com">pphtheq@gmail.com</a>
+        <!--- <b>Email:</b> <a href="mailto:pphtheq@gmail.com">pphtheq@gmail.com</a> --->
         </p>
         <hr>
         <p>
