--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -40,6 +40,16 @@ h3 {
   font-weight: bold; 
 }
 
+h1 {
+  font-size: 20px;
+}
+h2 {
+  font-size: 18px;
+}
+h3 {
+  font-size: 16px;
+}
+
 .page-header {
   padding: 1.5rem 6rem;
   background-color: #000;
