--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -55,6 +55,10 @@ h3 {
   background-image: none;
 }
 
+.main-content {
+  font-size: 16px;
+}
+
 .main-content img {
   width: auto;
   max-width: 100%;
