--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,13 +41,13 @@
       <a href="/"><img src="/images/{{ site.logo }}" alt="{{ page.title | default: site.title | default: site.github.repository_name }}" class="project-name" width="250" /></a>
       <span style="position: absolute; top: 0; font-size: 3rem;">&trade;</span>
       </div>
-      <a href="/instructions/" class="btn">INSTRUCTIONS</a>
-      <a href="/CCLS/" class="btn">CCLS</a>
-      <a href="/read-more/" class="btn">READ MORE</a>
-      <a href="/testimonials/" class="btn">TESTIMONIALS</a>
-      <a href="/references/" class="btn">REFERENCES</a>
-      <a href="/applications/" class="btn">APPLICATIONS</a>
-      <a href="#for-more-information-contact-us-at" class="btn">CONTACT US</a>
+      <a href="#instructions" class="btn">INSTRUCTIONS</a>
+      <a href="#ccls" class="btn">CCLS</a>
+      <a href="#read-more" class="btn">READ MORE</a>
+      <a href="#testimonials" class="btn">TESTIMONIALS</a>
+      <a href="#references" class="btn">REFERENCES</a>
+      <a href="#applications" class="btn">APPLICATIONS</a>
+      <a href="#contact-us" class="btn">CONTACT US</a>
     </header>
 
     <main id="content" class="main-content" role="main">
