--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
       <span style="position: absolute; top: 0; font-size: 3rem;">&trade;</span>
       </div>
       <a href="#instructions" class="btn">INSTRUCTIONS</a>
-      <a href="#ccls" class="btn">CCLS</a>
+      <a href="#CCLS" class="btn">CCLS</a>
       <a href="#testimonials" class="btn">TESTIMONIALS</a>
       <a href="#references" class="btn">REFERENCES</a>
     </header>
