--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -20,10 +20,6 @@ h4 + h5 {
   margin-top: 0 !important; 
 }
 
-h5 {
-  margin-top: 0;
-}
-
 h1,
 h2,
 h3 {
@@ -61,6 +57,10 @@ h3 {
   width: auto;
   max-width: 100%;
   height: auto;
+}
+
+.main-content h5 {
+  margin-top: 0;
 }
 
 .sr-only {
