--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,8 +25,7 @@
 
     <header class="page-header" role="banner">
       <div style="position: relative;">
-      <a href="/"><img src="/images/{{ site.logo }}" alt="{{ page.title | default: site.title | default: site.github.repository_name }}" class="project-name" width="250" /></a>
-      <span style="position: absolute; top: 0; font-size: 3rem;">&trade;</span>
+        {{ page.title }}
       </div>
       <a href="#instructions" class="btn">INSTRUCTIONS</a>
       <a href="#CCLS" class="btn">CCLS</a>
