--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,20 +22,34 @@
    </head>
    <body>
     <a id="skip-to-content" class="sr-only" href="#content">Skip to the content.</a>
+      <header>
+        <h1>{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
+        <p>{{ page.description | default: site.description | default: site.github.project_tagline }}</p>
+      </header>
 
-    <header class="page-header" role="banner">
-      <div style="position: relative;">
-        {{ page.title }}
-      </div>
-      <a href="#instructions" class="btn">INSTRUCTIONS</a>
-      <a href="#CCLS" class="btn">CCLS</a>
-      <a href="#testimonials" class="btn">TESTIMONIALS</a>
-      <a href="#references" class="btn">REFERENCES</a>
-    </header>
+      <div id="banner">
+        <span id="logo"></span>
 
-    <main id="content" class="main-content" role="main">
-      {{ content }}
+        <a href="{{ site.github.repository_url }}" class="button fork"><strong>View On GitHub</strong></a>
+        {% if site.show_downloads %}
+          <div class="downloads">
+            <span>Downloads:</span>
+            <ul>
+              <li><a href="{{ site.github.zip_url }}" class="button">ZIP</a></li>
+              <li><a href="{{ site.github.tar_url }}" class="button">TAR</a></li>
+            </ul>
+          </div>
+        {% endif %}
+      </div><!-- end banner -->
 
+    <div class="wrapper">
+      <nav>
+        <ul></ul>
+      </nav>
+      <section>
+        {{ content }}
+
+      </section>
       <footer class="site-footer" id="for-more-information-contact-us-at">
         {% if site.github.is_project_page %}
           <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
@@ -53,6 +67,7 @@
         </p>
         <b>Patent Number: #US 2020-017828A1</b>
       </footer>
-    </main>
+    </div>
   </body>
 </html>
+
