--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -30,38 +30,36 @@ ul {
   height: auto;
 }
 
-.main-content {
-  font-size: 16px;
-}
 
-.main-content table {
+table {
   border-collapse: separate;
   border-spacing: 0;
   min-width: 350px;
 }
-.main-content table tr th,
-.main-content table tr td {
+table tr th,
+table tr td {
   border-right: 1px solid #bbb;
   border-bottom: 1px solid #bbb;
   padding: 5px;
 }
-.main-content table tr th:first-child,
-.main-content table tr td:first-child {
+
+table tr th:first-child,
+table tr td:first-child {
   border-left: 1px solid #bbb;
 }
-.main-content table tr th {
+table tr th {
   background: #eee;
   border-top: 1px solid #bbb;
   text-align: left;
 }
 
 /* top-left border-radius */
-.main-content table tr:first-child th:first-child {
+table tr:first-child th:first-child {
   border-top-left-radius: 6px;
 }
 
 /* top-right border-radius */
-.main-content table tr:first-child th:last-child {
+table tr:first-child th:last-child {
   border-top-right-radius: 6px;
 }
 
@@ -71,7 +69,7 @@ ul {
 }
 
 /* bottom-right border-radius */
-.main-content table tr:last-child td:last-child {
+table tr:last-child td:last-child {
   border-bottom-right-radius: 6px;
 }
 
