--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,14 @@
 
     <div class="wrapper">
       <nav>
-        <ul></ul>
+        <ul>
+          <li><a href="#applications">Applications</a></li>
+          <li><a href="#instructions">Instructions</a></li>
+          <li><a href="#design">Design</a></li>
+          <li><a href="#about">About Us</a></li>
+          <li><a href="#references">References</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
       </nav>
       <section>
         {{ content }}
