--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,9 +45,13 @@
     <div class="wrapper">
       <nav>
         <ul>
-          <li><a href="#applications">Applications</a></li>
           <li><a href="#instructions">Instructions</a></li>
           <li><a href="#design">Design</a></li>
+          <li><a href="#testimonials">Testimonials</a></li>
+          <li><a href="#CCLS">CCLS</a></li>
+          <li><a href="#applications">Applications</a></li>
+          <li><a href="#classification">Device Classification</a></li>
+          <li><a href="#appendix">Appendix</a></li>
           <li><a href="#about">About Us</a></li>
           <li><a href="#references">References</a></li>
           <li><a href="#contact">Contact</a></li>
