--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,22 +63,9 @@
         {{ content }}
 
       </section>
-      <footer class="site-footer" id="for-more-information-contact-us-at">
-        {% if site.github.is_project_page %}
-          <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
-        {% endif %}
-        <h2><b>For more information contact us at:</b></h2>
-        <p>
-        <b>Phone:</b> <a href="tel:1-806-778-2183">(806)778-2183</a> or <a href="tel:1-241-778-0373">(806)241-0373</a>
-        </p>
-        <p>
-        <!--- <b>Email:</b> <a href="mailto:pphtheq@gmail.com">pphtheq@gmail.com</a> --->
-        </p>
-        <hr>
-        <p>
+      <footer>
         &copy; Copyright 2024, SJMJC, LLC.
-        </p>
-        <b>Patent Number: #US 2020-017828A1</b>
+        <p><b>Patent Number:<br>#US 2020-017828A1</b></p>
       </footer>
     </div>
   </body>
