--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,10 +27,12 @@
       <header>
         <h1>{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       </header>
-
+    
+     <!--
       <div id="banner">
         <span id="logo"></span>
-      </div><!-- end banner -->
+      </div>
+     -->
 
     <div class="wrapper">
       <nav>
