--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -33,7 +33,7 @@ ul {
 
 .grid-item figcaption {
   font-size: 0.875em; /* Small text */
-  color: #A9A9A9; /* Light grey color */
+  color: #808080; /* Light grey color */
   font-style: italic; /* Italicized text */
   padding: 5px;
   text-align: center; /* Center align the text */
