--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,10 +10,9 @@ ul {
 
 hr {
   border: 0;
-  height: 1px; /* Simple line */
-  background: none;
-  margin: 20px auto; /* Center the hr */
-  width: 80%; /* Set the width to 80% of the container */
+  height: 1px;
+  background: #333;
+  background-image: linear-gradient(to right, #ccc, #333, #ccc);
 }
 
 .grid-container {
