--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
       </section>
       <footer>
         <p><b>Patent Number:<br>#US 2020-017828A1</b></p>
-        &copy; Copyright 2024, SJMJC, LLC.
+        &copy; Copyright 2024
       </footer>
     </div>
   </body>
