--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,7 +4,7 @@
 @import "{{ site.theme }}";
 
 #logo {
-    background: url(../images/IMG_6454.png);
+    background: url(/images/IMG_6454.png);
   }
 
 nav ul a {
