--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,9 +28,10 @@
         <h1>{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       </header>
 
+     <!---
       <div id="banner">
         <span id="logo"></span>
-      </div>
+      </div>--->
 
     <div class="wrapper">
       <nav>
